infra/yearning/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yearing
  namespace: infra
spec:
  rules:
    # 需要在本地机器的hosts文件中添加配置：192.168.111.111 www.yearning.com
    - host: yearning.dmtech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yearning
                port:
                  number: 80
